--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,22 @@
   margin: 0 auto;
   padding: 20px 15px;
 }
+
+.username-container {
+  width: 800px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 25px;
+}
+
+.success-message {
+  color: lightgreen;
+}
+
+.failed-message {
+  color: lightcoral;
+}
