added tries/ fixed code

--- a/src/Components/OTPInput.css
+++ b/src/Components/OTPInput.css
@@ -15,6 +15,9 @@
   font-weight: 700;
   line-height: 1;
 }
+.otp-input:disabled {
+  cursor: not-allowed;
+}
 .go-back-button {
   margin-top: 15px;
 }
